Replace usage of some deprecated methods